--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 </head>
 <body>
     <nav></nav>
-    <section class="intro">
+    <div class="overlay"></div>
+    <section class="intro reveal">
         <div class="intro-wrapper">
             <h1>Where every sip feels like home</h1>
             <p>Join us for the finest coffee, delicious pastries, and a warm atmosphere. Your perfect spot to relax and recharge.</p>
             <button class ="main-button">Explore our specials</button>
         </div>
     </section>
-    <section class="running-line">
-        <img src="assets/yellow-line.png" alt="">
+    <section class="running-line reveal">
+        <img src="assets/yellow-line.png" alt="Yellow line">
         <h1> 100% Organic coffee beans || Artisan coffee for every palate || Your perfect coffee moment awaits || Experience the Difference ||</h1>
-        <img src="assets/yellow-line.png" class="upside-down" alt="">
+        <img src="assets/yellow-line.png" class="upside-down" alt="Reverse yellow line">
     </section>
-    <section class="activity">
+    <section class="activity reveal">
          <!-- Poetry Reading -->
         <article class="card">
             <h2 class="card-title">Poetry reading</h2>
             <div class="img-wrapper">
-                <img src="assets/activity1.avif" alt="People reading books together">
+                <img src="assets/activity1.avif" alt="People reading books together" loading="lazy">
             </div>
             <p class="card-description">
                 Whether you're a poet or a poetry lover, come and share your work or simply listen and be moved by the words of others.
@@ -39,7 +40,7 @@
         <article class="card">
             <h2 class="card-title">Live music nights</h2>
             <div class="img-wrapper">
-                <img src="assets/activity2.avif" alt="Musicians playing guitar">
+                <img src="assets/activity2.avif" alt="Musicians playing guitar" loading="lazy">
             </div>
             <p class="card-description">
                 We feature local artists and bands, creating a lively atmosphere where you can relax with a cup of coffee.
@@ -50,7 +51,7 @@
         <article class="card">
             <h2 class="card-title">Special guest appearances</h2>
             <div class="img-wrapper">
-                <img src="assets/activity3.avif" alt="Band performing on stage">
+                <img src="assets/activity3.avif" alt="Band performing on stage" loading="lazy">
             </div>
             <p class="card-description">
                 Brew Haven is the perfect venue for your private events and celebrations.
@@ -58,7 +59,7 @@
             <a href="#" class="read-more">Read more <i class="fa-solid fa-arrow-right"></i></a>
         </article>
     </section>
-    <section class="comments">
+    <section class="comments reveal">
         <h2 class="comment-title">
             Comments
         </h2>
@@ -144,7 +145,7 @@
             </p>
         </div>
     </section>
-   <section class="achievements">
+   <section class="achievements reveal">
 
         <div class="achievement">
             <h1 class="achievement-title">10<span class="orange-title">K</span></h1>
@@ -170,7 +171,7 @@
             <p class="achievement-desc">From croissants to muffins, our bakery has produced over 30,000 fresh.</p>
         </div>
     </section>
-    <section class="story-1">
+    <section class="story-1 reveal">
         <div class="story-1-wrapper">
             <h1 class="story-1-title">Spread the love with your own just love coffee cafe</h1> <br> <br>
             <p class="story-1-desc">Our cozy, inviting atmosphere is the perfect place to relax, connect, and enjoy the simple pleasures of life.
@@ -179,13 +180,13 @@
             <a href="contact.html" class="main-button">Request for information</a>
         </div>
         <div class="story-1-img">
-            <img src="assets/story1.avif" alt="">
+            <img src="assets/story1.avif" alt="restaurant interior with wooden tables green and red chairs hanging pendant lamps server in white shirt" loading="lazy">
         </div>
         <div class="story-1-other-img">
-            <img src="assets/story2.avif" alt="" class="pic-a">
-            <img src="assets/story3.avif" alt="" class="pic-b">
-            <img src="assets/story4.avif" alt="" class="pic-c">
-            <img src="assets/story5avif.avif" alt="" class="pic-d">
+            <img src="assets/story2.avif" alt="Friends chatting at an outdoor café" class="pic-a" loading="lazy">
+            <img src="assets/story3.avif" alt="Group of friends relaxing with a dog outdoors" class="pic-b" loading="lazy">
+            <img src="assets/story4.avif" alt="Espresso machine brewing coffee" class="pic-c" loading="lazy">
+            <img src="assets/story5avif.avif" alt="Woman holding a cup of coffee in a café" class="pic-d" loading="lazy">
         </div>
 
     </section>
