--- a/policy.html
+++ b/policy.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <nav></nav>
+    <div class="overlay"></div>
     <header class="intro">
         <h1>Privacy policy</h1>
         <p>Last updated: April 05, 2024</p>
