--- a/blog-posts/post-1.html
+++ b/blog-posts/post-1.html
@@ -84,7 +84,7 @@
         <!-- Blog 2 -->
         <a href="blog-posts/post-2.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog2.avif" alt="Friends eating fast food" class="blog-img">
+                <img src="assets/blog2.avif" alt="Friends eating fast food" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Fast food pairings</div>
             <h2 class="blog-card-desc">The ultimate guide to pairing fast food with drinks</h2>
@@ -93,7 +93,7 @@
         <!-- Blog 3 -->
         <a href="blog-posts/post-3.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog3.avif" alt="Café owner sitting outside" class="blog-img">
+                <img src="assets/blog3.avif" alt="Café owner sitting outside" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Café life</div>
             <h2 class="blog-card-desc">A day in the life of a café owner with insights and stories</h2>
@@ -102,7 +102,7 @@
         <!-- Blog 4 -->
         <a href="blog-posts/post-4.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog4.avif" alt="Couple holding hands at a table" class="blog-img">
+                <img src="assets/blog4.avif" alt="Couple holding hands at a table" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Sustainability</div>
             <h2 class="blog-card-desc">Sustainable coffee practices for couples</h2>
