--- a/blog-posts/post-2.html
+++ b/blog-posts/post-2.html
@@ -84,7 +84,7 @@
         <!-- Blog 3 -->
         <a href="blog-posts/post-3.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog3.avif" alt="Café owner sitting outside" class="blog-img">
+                <img src="assets/blog3.avif" alt="Café owner sitting outside" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Café life</div>
             <h2 class="blog-card-desc">A day in the life of a café owner with insights and stories</h2>
@@ -93,7 +93,7 @@
         <!-- Blog 4 -->
         <a href="blog-posts/post-4.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog4.avif" alt="Couple holding hands at a table" class="blog-img">
+                <img src="assets/blog4.avif" alt="Couple holding hands at a table" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Sustainability</div>
             <h2 class="blog-card-desc">Sustainable coffee practices for couples</h2>
@@ -102,7 +102,7 @@
         <!-- Blog 5 -->
         <a href="blog-posts/post-5.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog5.avif" alt="Coffee sourcing and beans" class="blog-img">
+                <img src="assets/blog5.avif" alt="Coffee sourcing and beans" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Coffee origins</div>
             <h2 class="blog-card-desc">Behind the beans and our journey to sourcing quality coffee</h2>
