--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <nav></nav>
+    <div class="overlay"></div>
     <header class="intro">
         <h1>Our blog</h1>
     </header>
@@ -17,7 +18,7 @@
         <!-- Blog 1 -->
         <a href="blog-posts/post-1.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog1.avif" alt="Barista serving coffee" class="blog-img">
+                <img src="assets/blog1.avif" alt="Barista serving coffee" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Coffee craft</div>
             <h2 class="blog-card-desc">Brewing the perfect cup with tips from our baristas</h2>
@@ -26,7 +27,7 @@
         <!-- Blog 2 -->
         <a href="blog-posts/post-2.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog2.avif" alt="Friends eating fast food" class="blog-img">
+                <img src="assets/blog2.avif" alt="Friends eating fast food" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Fast food pairings</div>
             <h2 class="blog-card-desc">The ultimate guide to pairing fast food with drinks</h2>
@@ -35,7 +36,7 @@
         <!-- Blog 3 -->
         <a href="blog-posts/post-3.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog3.avif" alt="Café owner sitting outside" class="blog-img">
+                <img src="assets/blog3.avif" alt="Café owner sitting outside" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Café life</div>
             <h2 class="blog-card-desc">A day in the life of a café owner with insights and stories</h2>
@@ -44,7 +45,7 @@
         <!-- Blog 4 -->
         <a href="blog-posts/post-4.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog4.avif" alt="Couple holding hands at a table" class="blog-img">
+                <img src="assets/blog4.avif" alt="Couple holding hands at a table" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Sustainability</div>
             <h2 class="blog-card-desc">Sustainable coffee practices for couples</h2>
@@ -53,7 +54,7 @@
         <!-- Blog 5 -->
         <a href="blog-posts/post-5.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog5.avif" alt="Coffee sourcing and beans" class="blog-img">
+                <img src="assets/blog5.avif" alt="Coffee sourcing and beans" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Coffee origins</div>
             <h2 class="blog-card-desc">Behind the beans and our journey to sourcing quality coffee</h2>
@@ -62,7 +63,7 @@
         <!-- Blog 6 -->
         <a href="blog-posts/post-6.html" class="blog-card">
             <div class="blog-img-wrapper">
-                <img src="assets/blog6.avif" alt="Man drinking coffee at outdoor café" class="blog-img">
+                <img src="assets/blog6.avif" alt="Man drinking coffee at outdoor café" class="blog-img" loading="lazy">
             </div>
             <div class="sub-title">Seasonal offers</div>
             <h2 class="blog-card-desc">Seasonal specials and what's brewing this month</h2>
