--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <nav></nav>
+    <div class="overlay"></div>
     <header class="intro">
         <h1>We are here to help you</h1>
     </header>
@@ -25,7 +26,7 @@
             <button class="main-button">Submit</button>
         </div>
         <div class="contact-img">
-            <img src="assets/contact.avif" alt="">
+            <img src="assets/contact.avif" alt="Barista preparing orders at a coffee counter" loading="lazy">
             <img src="assets/pattern.svg" alt="" class="pattern">
         </div>
     </div>
@@ -58,7 +59,7 @@
             <div class="contact-icon-wrapper">
                 <i class="fa-solid fa-globe"></i> 
             </div>
-            <h2 class="info-title">Email</h2>
+            <h2 class="info-title">Follow us</h2>
             <div class="follow-info">
                 <a href="https://www.facebook.com/xRekzy"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="https://www.facebook.com/xRekzy"><i class="fa-brands fa-instagram"></i></a>
