--- a/map.html
+++ b/map.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <nav></nav>
+    <div class="overlay"></div>
     <header class="intro">
         <h1>Our locations</h1>
     </header>
     <div class="locations">
         <div class="location-wrapper">
             <div class="location-img">
-                <img src="assets/location1.avif" alt="location 1"> 
+                <img src="assets/location1.avif" alt="Cozy restaurant interior with wooden table, warm lighting, and garden view" loading="lazy"> 
             </div>
             <div class="location-detail">
                 <h2 class="location-title">Montego bay</h2>
                 <p class="location-desc">Bermuda Dunes Cir Indio, California(CA), 92203</p>
-                <!-- <iframe src="https://maps.app.goo.gl/c5TaYHQNdnogsHvw5" frameborder="0" class="location-map"></iframe> -->
                 <iframe class="location-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3317.7189030050604!2d-116.28017452549315!3d33.74208417327538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80daf99d5bd6710d%3A0x9a5a3db93a44c1ff!2sBermuda%20Dunes%20Dr%2C%20Bermuda%20Dunes%2C%20CA%2092203%2C%20Hoa%20K%E1%BB%B3!5e0!3m2!1svi!2s!4v1772096412002!5m2!1svi!2s" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <div class="location-info">
                     <a href="tel:+015982694756" class="location-contact-link">+015982694756</a>
@@ -42,13 +42,13 @@
                 </div>
             </div>
             <div class="location-img">
-                <img src="assets/location2.avif" alt="Randall mill ave"> 
+                <img src="assets/location2.avif" alt="Modern restaurant dining area with brick wall, sofas, and soft ambient lighting" loading="lazy"> 
             </div>
         </div>
 
         <div class="location-wrapper">
             <div class="location-img">
-                <img src="assets/location3.avif" alt="Times square"> 
+                <img src="assets/location3.avif" alt="Spacious modern cafe interior with long wooden tables and industrial design" loading="lazy"> 
             </div>
             <div class="location-detail">
                 <h2 class="location-title">Times square</h2>
