--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <nav></nav>
     <div class="overlay"></div>
     <div class="about">
-        <header class="about-intro">
+        <header class="about-intro reveal">
             <h1 class="about-title">About Brew haven</h1>
             <p class="about-desc">Our cafe, located in the heart of is a cozy haven where you can enjoy the finest coffee, delicious food, and a welcoming atmosphere.</p>
             <br><br>
@@ -21,7 +21,7 @@
             </div>
         </header>
         <br><br><br><br>
-        <div class="about-journey">
+        <div class="about-journey reveal">
             <h2 class="journey-title">Our journey</h2>      
             <div class="journey-wrapper">
                 <p class="journey-desc">
@@ -40,7 +40,7 @@
             </div>
         </div>
         <br><br><br><br>
-        <div class="stand-for">
+        <div class="stand-for reveal">
             <h2 class="stand-for-title">What We Stand For</h2>
             <div class="stand-for-wrapper">
                 <div class="stand-for-characters">
@@ -64,7 +64,7 @@
             </div>
         </div>
         <br><br><br><br>
-        <div class="employees">
+        <div class="employees reveal">
             <h2 class="employees-title">Meet our team</h2>
             <div class="employees-wrapper">
                 <div class="employee">
