--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
     <header class="intro">
         <h1>Our blog</h1>
     </header>
-    <div class="blog">
+    <div class="blog reveal">
         <!-- Blog 1 -->
         <a href="blog-posts/post-1.html" class="blog-card">
             <div class="blog-img-wrapper">
