--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
 <body>
     <nav></nav>
     <div class="overlay"></div>
-    <header class="intro">
+    <header class="intro reveal">
         <h1>We are here to help you</h1>
     </header>
-    <div class="contact">
+    <div class="contact reveal">
         <div class="contact-form-wrapper">
             <form action="" class="contact-form">
                 <input type="text" class="form-input" placeholder="Name">
