--- a/map.html
+++ b/map.html
@@ -15,7 +15,7 @@
         <h1>Our locations</h1>
     </header>
     <div class="locations">
-        <div class="location-wrapper">
+        <div class="location-wrapper reveal">
             <div class="location-img">
                 <img src="assets/location1.avif" alt="Cozy restaurant interior with wooden table, warm lighting, and garden view" loading="lazy"> 
             </div>
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-        <div class="location-wrapper">
+        <div class="location-wrapper reveal">
             <div class="location-detail">
                 <h2 class="location-title">Randall mill ave</h2>
                 <p class="location-desc">106 Grant Ave. Logansport, IN 46947</p>
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="location-wrapper">
+        <div class="location-wrapper reveal">
             <div class="location-img">
                 <img src="assets/location3.avif" alt="Spacious modern cafe interior with long wooden tables and industrial design" loading="lazy"> 
             </div>
