--- a/blog-posts/post-3.html
+++ b/blog-posts/post-3.html
@@ -50,7 +50,7 @@
         </p>
         <br><br>
         <div class="page-video-wrapper">
-            <iframe src="https://www.youtube.com/embed/-ChLT7b2Gj8" frameborder="0" class="page-video" ></iframe>
+            <iframe src="https://www.youtube.com/embed/-ChLT7b2Gj8" frameborder="0" class="page-video" loading="lazy"></iframe>
         </div>
         <br><br>
         <h2 class="page-title">
