--- a/policy.html
+++ b/policy.html
@@ -11,11 +11,11 @@
 <body>
     <nav></nav>
     <div class="overlay"></div>
-    <header class="intro">
+    <header class="intro reveal">
         <h1>Privacy policy</h1>
         <p>Last updated: April 05, 2024</p>
     </header>
-    <div class="page-wrapper">
+    <div class="page-wrapper reveal">
         <h2 class="page-title">
             Collecting Personal Information
         </h2>
