--- a/services.html
+++ b/services.html
@@ -167,7 +167,7 @@
         </div>
     </section>
 </div>
-    <form class="order reveal">
+    <form class="order">
         <h2 class="order-title">Order</h2>
 
         <label>
