--- a/blog-posts/post-6.html
+++ b/blog-posts/post-6.html
@@ -4,13 +4,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="../">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <title>Brewhaven cloned by ITCSIU24029</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    
+    <link rel="icon" href="assets/icon.png">
 </head>
 <body>
     <nav></nav>
+    <div class="overlay"></div>
     <header class="intro">
         <div class="intro-sub">
             <div class="sub-title">Seasonal offers</div>
